--- a/Messaging.Client.WpfApplication/Shell/ShellView.xaml
+++ b/Messaging.Client.WpfApplication/Shell/ShellView.xaml
@@ -2,10 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:DataVirtualization="clr-namespace:System.ComponentModel.Client.DataVirtualization;assembly=System.ComponentModel.Messaging.Client"
-        Title="Data Virtualization Test"
+        xmlns:Shell="clr-namespace:System.ComponentModel.WpfApplication.Shell"        
         Height="300"
-        Width="300">
+        Width="300">    
     <TabControl>
+        <TabControl.Resources>
+            <DataTemplate DataType="{x:Type DataVirtualization:IVirtualCollectionItem}" x:Key="NotLoaded">
+                <Grid Background="Aquamarine">
+                    <TextBlock Margin="5" Text="Loading..."/>
+                </Grid>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type DataVirtualization:IVirtualCollectionItem}" x:Key="Loaded">
+                <Grid Background="LawnGreen">
+                    <TextBlock Margin="5" Text="{Binding Value}" HorizontalAlignment="Right "/>
+                </Grid>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type DataVirtualization:IVirtualCollectionItem}" x:Key="FailedToLoad">
+                <Grid Background="LightCoral">
+                    <TextBlock Margin="5" Text="Error (simulated)"/>
+                </Grid>
+            </DataTemplate>
+            
+            <Shell:VirtualCollectionItemTemplateSelector x:Key="ItemTemplateSelector"
+                                                         NotLoadedItemTemplate="{StaticResource NotLoaded}"
+                                                         LoadedItemTemplate="{StaticResource Loaded}"
+                                                         FailedToLoadItemTemplate="{StaticResource FailedToLoad}" />
+        </TabControl.Resources>
         <TabItem Header="ListView">
             
             <Grid>
@@ -20,22 +44,10 @@
 
                 <ListView Grid.Row="1"
                           ItemsSource="{Binding ListViewCollection, Mode=OneWay}"
+                          ItemTemplateSelector="{StaticResource ItemTemplateSelector}"
                           VirtualizingStackPanel.IsVirtualizing="True"
                           VirtualizingStackPanel.VirtualizationMode="Recycling"
-                          ScrollViewer.IsDeferredScrollingEnabled="True">
-                    <ListView.ItemTemplate>
-                        <DataTemplate DataType="{x:Type DataVirtualization:IVirtualCollectionItem}">
-                            <TextBlock x:Name="Label" Text="{Binding Value}" Background="LightCoral" />
-
-                            <DataTemplate.Triggers>
-                                <DataTrigger Binding="{Binding IsLoaded}" Value="True">
-                                    <Setter TargetName="Label" Property="Background" Value="LawnGreen" />
-                                    <Setter TargetName="Label" Property="FontWeight" Value="Bold" />
-                                </DataTrigger>
-                            </DataTemplate.Triggers>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                          ScrollViewer.IsDeferredScrollingEnabled="True" />
                
             </Grid>            
             
@@ -61,20 +73,8 @@
                           ScrollViewer.IsDeferredScrollingEnabled="True">
                     
                     <DataGrid.Columns>
-                        <DataGridTemplateColumn Header="Numbers">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate DataType="{x:Type DataVirtualization:IVirtualCollectionItem}">
-                                    <TextBlock x:Name="Label" Text="{Binding Value}" Background="LightCoral" />
-
-                                    <DataTemplate.Triggers>
-                                        <DataTrigger Binding="{Binding IsLoaded}" Value="True">
-                                            <Setter TargetName="Label" Property="Background" Value="LawnGreen" />
-                                            <Setter TargetName="Label" Property="FontWeight" Value="Bold" />
-                                        </DataTrigger>
-                                    </DataTemplate.Triggers>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="Numbers"
+                                                CellTemplateSelector="{StaticResource ItemTemplateSelector}"/>
                     </DataGrid.Columns>                                        
                 </DataGrid>
 
