--- a/Messaging.Client.DataVirtualizationDemo/App.xaml
+++ b/Messaging.Client.DataVirtualizationDemo/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="System.ComponentModel.WpfApplication.App"
+﻿<Application x:Class="System.ComponentModel.Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:WpfApplication="clr-namespace:System.ComponentModel.WpfApplication">
+             xmlns:WpfApplication="clr-namespace:System.ComponentModel.Client">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
