--- a/src/Kingo.Windows.DemoApp/App.xaml
+++ b/src/Kingo.Windows.DemoApp/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="Kingo.Wpf.DemoApp.App"
+﻿<Application x:Class="Kingo.Windows.DemoApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Kingo.Wpf.DemoApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
