--- a/src/Kingo.Windows.DemoApp/MainWindow.xaml
+++ b/src/Kingo.Windows.DemoApp/MainWindow.xaml
@@ -1,36 +1,37 @@
-﻿<Window x:Class="Kingo.Wpf.DemoApp.MainWindow"
+﻿<Window x:Class="Kingo.Windows.DemoApp.MainWindow"
+        x:Name="_window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Wpf="clr-namespace:Kingo.Wpf;assembly=Kingo.Wpf"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:Media3D="clr-namespace:Kingo.Windows.Media3D;assembly=Kingo.Windows"        
         mc:Ignorable="d"
         Title="Kingo WPF Demo Application"
         Width="1024"
-        Height="768"
-        KeyDown="HandleKeyDown">
-    <Grid>
-      <Viewport3D x:Name="_viewPort">
-        <Viewport3D.Resources>
-          <Wpf:ProjectionCameraController x:Key="CameraController" Position="0, 0, 15" />
-        </Viewport3D.Resources>
+        Height="768">
+    <Grid>      
+      <Viewport3D>        
         <Viewport3D.Camera>
-          <PerspectiveCamera Position="{Binding Position, Source={StaticResource CameraController}}"
-                             LookDirection="{Binding LookDirection, Source={StaticResource CameraController}}"
-                             UpDirection="{Binding UpDirection, Source={StaticResource CameraController}}"/>
+          <PerspectiveCamera>
+            <i:Interaction.Behaviors>
+              <Media3D:ProjectionCameraControllerBehavior InputSource="{Binding ElementName=_window}">
+                
+                <Media3D:ControlMode />
+              </Media3D:ProjectionCameraControllerBehavior>
+            </i:Interaction.Behaviors>
+          </PerspectiveCamera>
         </Viewport3D.Camera>
 
         <ModelVisual3D>
           <ModelVisual3D.Content>
-            <DirectionalLight x:Name="_sunLight"
-                              Direction="-1,-1,-1" />
+            <DirectionalLight x:Name="_sunLight" Direction="-1,-1,-1" />
           </ModelVisual3D.Content>
         </ModelVisual3D>
 
         <ModelVisual3D>
           <ModelVisual3D.Content>
-            <AmbientLight x:Name="_ambientLight"
-                          Color="#444444"/>
+            <AmbientLight x:Name="_ambientLight" Color="#444444"/>
           </ModelVisual3D.Content>
         </ModelVisual3D>
 
