--- a/src/Kingo.Windows.DemoApp/MainWindow.xaml
+++ b/src/Kingo.Windows.DemoApp/MainWindow.xaml
@@ -1,31 +1,55 @@
-﻿<Window x:Class="Kingo.Windows.DemoApp.MainWindow"
+﻿<Window x:Class="Kingo.Windows.DemoApp.MainWindow"        
         x:Name="_window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:Media3D="clr-namespace:Kingo.Windows.Media3D;assembly=Kingo.Windows"        
+        xmlns:Media3D="clr-namespace:Kingo.Windows.Media3D;assembly=Kingo.Windows"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Kingo WPF Demo Application"
         Width="1024"
         Height="768">
     <Grid>      
-      <Viewport3D>        
+      <Grid.RowDefinitions>
+        <RowDefinition Height="50" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      
+      <Viewport3D Grid.Row="1"> 
+        <Viewport3D.Resources>
+          <System:Double x:Key="MoveLeftSpeed">-0.5</System:Double>
+          <System:Double x:Key="MoveRightSpeed">0.5</System:Double>
+        </Viewport3D.Resources>
+
+        <i:Interaction.Behaviors>
+          <Media3D:ProjectionCameraControllerBehavior>
+            <Media3D:ControlMode>
+              <Media3D:KeyDownBinding CommandParameter="{StaticResource MoveLeftSpeed}"
+                                      KeyGesture="NumPad4">
+                <Media3D:KeyDownBinding.Command>
+                  <Media3D:MoveLeftRightCommand />
+                </Media3D:KeyDownBinding.Command>
+              </Media3D:KeyDownBinding>
+
+              <Media3D:KeyDownBinding CommandParameter="{StaticResource MoveRightSpeed}"
+                                      KeyGesture="NumPad6">
+                <Media3D:KeyDownBinding.Command>
+                  <Media3D:MoveLeftRightCommand />
+                </Media3D:KeyDownBinding.Command>
+              </Media3D:KeyDownBinding>
+            </Media3D:ControlMode>
+          </Media3D:ProjectionCameraControllerBehavior>
+        </i:Interaction.Behaviors>
+
         <Viewport3D.Camera>
-          <PerspectiveCamera>
-            <i:Interaction.Behaviors>
-              <Media3D:ProjectionCameraControllerBehavior InputSource="{Binding ElementName=_window}">
-                
-                <Media3D:ControlMode />
-              </Media3D:ProjectionCameraControllerBehavior>
-            </i:Interaction.Behaviors>
-          </PerspectiveCamera>
+          <PerspectiveCamera Position="0.5, 0.5, 10" />                                   
         </Viewport3D.Camera>
 
         <ModelVisual3D>
           <ModelVisual3D.Content>
-            <DirectionalLight x:Name="_sunLight" Direction="-1,-1,-1" />
+            <DirectionalLight x:Name="_sunLight" Direction="-1,-2,-3" />
           </ModelVisual3D.Content>
         </ModelVisual3D>
 
