--- a/src/Kingo.Windows.DemoApp/MainWindow.xaml
+++ b/src/Kingo.Windows.DemoApp/MainWindow.xaml
@@ -15,17 +15,23 @@
         <i:Interaction.Behaviors>
           <Media3D:ProjectionCameraControllerBehavior>
             <Media3D:ControlMode>
-              <Media3D:MoveBinding Left="A"
-                                   Right="D"
-                                   Forward="W"
-                                   Backward="S"
-                                   Speed="0.5" />
-            </Media3D:ControlMode>
+              <Media3D:KeyCommandBinding Left="A"
+                                         Right="D"
+                                         Forward="W"
+                                         Backward="S"                                      
+                                         MoveSpeed="0.5" />
+              
+              <Media3D:MouseWheelCommandBinding Up="ScrollDown"
+                                                Down="ScrollUp"
+                                                MoveSpeed="2" />
+            </Media3D:ControlMode>                        
           </Media3D:ProjectionCameraControllerBehavior>
         </i:Interaction.Behaviors>
 
         <Viewport3D.Camera>
-          <PerspectiveCamera Position="0.5, 0.5, 30" />                                   
+          <PerspectiveCamera Position="10, 20, 30"
+                             LookDirection="-10, -20, -30"
+                             FieldOfView="90" />                                   
         </Viewport3D.Camera>
 
         <ModelVisual3D>
